--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keeper",
   "version": "0.0.1",
   "description": "A simple password manager that uses key derivation.",
-  "main": "keeper.js",
+  "main": "src/keeper.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/devhsoj/keeper/issues"
   },
-  "homepage": "https://github.com/devhsoj/keeper#readme"
+  "homepage": "https://github.com/devhsoj/keeper#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "nunjucks": "^3.2.3",
+    "pg": "^8.7.1"
+  }
 }
