--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple password manager that uses key derivation.",
   "main": "src/keeper.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/keeper.js"
   },
   "repository": {
     "type": "git",
