--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keeper",
-  "version": "0.0.1",
-  "description": "A simple password manager that uses key derivation.",
+  "version": "0.0.4",
+  "description": "A simple, secure web based password manager that uses key derivation.",
   "main": "src/keeper.js",
   "scripts": {
     "start": "node src/keeper.js"
